Edit css in app to ensure components in create account window do not overflow

--- a/src/pages/App/App.module.css
+++ b/src/pages/App/App.module.css
@@ -15,6 +15,6 @@
 
 @media(max-height: 800px){
   .displayContainer{
-    min-height:630px;
+    min-height:660px;
   }
 }
